syntax = "proto3";

package go.micro.api.cartApi;

import "proto/imports/api.proto";

service CartApi {
	rpc FindAll(go.api.Request) returns (go.api.Response) {}
}
